fix: proposal preview card variant vote gap

--- a/src/components/Common/ProposalPreviewCard/ProposalPreviewCard.css
+++ b/src/components/Common/ProposalPreviewCard/ProposalPreviewCard.css
@@ -8,6 +8,7 @@
 }
 
 .ProposalPreviewCard--vote {
+  gap: 8px;
   border-bottom: 1px solid var(--black-300);
 }
 
